Implemented Book Service and Controller with corresponding DTO classes